# spop-calc

./: README.md  spop-calc.cabal  stack.yaml
app/: Main.hs
bench/: BenchmarkSuite.hs
sheet/: spop-calc-sheet.cabal
sheet/app/: Main.hs
sheet/src/: IOUtil.hs
sheet/test/: SheetTest.hs
src/: Cell.hs  CellParser.hs  IOUtil.hs  Sheet.hs  ShowRational.hs
test/: CellParserTest.hs  CellTest.hs  SheetTest.hs  Spec.hs
test/resources/: simple.csv
web/: Application.hs  Common.hs  Foundation.hs  my-project.cabal  spop-calc-web.cabal  stack.yaml
web/Handler/: Api.hs  Common.hs  Home.hs
web/app/: devel.hs
web/config/: keter.yml  routes  settings.yml
web/templates/: default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  homepage.hamlet  homepage.julius  homepage.lucius
