name:                spop-calc
version:             0.1.0.0
synopsis:            Implementacja projektu na przedmiot SPOP
description:         Please see README.md
homepage:            https://github.com/githubuser/spop-calc#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Mościcki
                   , Mateusz Kamiński
maintainer:          example@example.com
copyright:           2016 Kamiński & Mościcki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Cell
                     , CellParser
                     , IOUtil
  build-depends:       base >= 4.7 && < 5
                     , split == 0.2.3.1
                     , parsec == 3.1.8
  default-language:    Haskell2010

executable spop-calc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-terminal
                     , spop-calc
  default-language:    Haskell2010

test-suite spop-calc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , parsec == 3.1.8
                     , spop-calc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/spop-calc
